--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,23 @@ body {
     margin-bottom: 2rem;
 }
 
-.movie-card img {
-    max-width: 100vw;
+.card img {
+    max-width: 350px;
+    margin: 4rem;
     
+}
+
+.card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+}
+
+.plot {
+    padding: 4rem;
 }
